<resources>
    <string name="app_name">PopualrMovies</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="overview_title">Overview \n</string>
    <string name="trailer_title">Trailers \n</string>
    <string name="Review_title">Reviews \n</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
