<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.example.shalan.popualrmovies.DetailsActivity"
    tools:showIn="@layout/activity_details">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <ImageView
                        android:layout_width="@dimen/poster_dimen"
                        android:layout_height="wrap_content"
                        android:id="@+id/poster_in_details"
                        android:scaleType="centerCrop"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical|fill_horizontal|center">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@drawable/date"
                                    android:layout_marginLeft="16dp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:id="@+id/date"
                                    android:text="@string/app_name"
                                    android:gravity="center"
                                    android:layout_gravity="center" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:src="@drawable/star"

                                    android:layout_marginLeft="16dp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/rate_detail"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="16dp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="/10"
                                    android:layout_gravity="center" />
                            </LinearLayout>

                    </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:id="@+id/overview_title"
                        android:text="@string/overview_title"
                        android:textColor="@color/Titles"
                        android:textSize="22dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/line"
                        android:id="@+id/divider"
                        android:layout_alignBaseline="@id/overview_title"
                        android:paddingTop="3dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:paddingTop="25dp"
                        android:id="@+id/overview_details"
                        android:layout_alignParentBottom="true"
                        android:text="@string/large_text" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:id="@+id/Trailer_title"
                    android:text="@string/trailer_title"
                    android:textColor="@color/Titles"
                    android:textSize="22dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/divLine"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/line"
                    android:layout_alignBaseline="@id/Trailer_title"
                    android:paddingTop="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="5dp" />

                <ImageView
                    android:id="@+id/Trailer_Img"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="28sp"
                    android:layout_marginBottom="16sp"
                    android:layout_margin="@dimen/text_margin" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:id="@+id/Review_title"
                    android:text="@string/Review_title"
                    android:textColor="@color/Titles"
                    android:textSize="22dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/divLineReview"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/line"
                    android:layout_alignBaseline="@id/Review_title"
                    android:paddingTop="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="5dp" />
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/review_listview"
                    android:paddingTop="45sp"
                    android:layout_alignParentBottom="true">

                </ListView>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
